# Fast-copier

./: .cclone.resume.example  .cclone.yaml.example  .fcopyrover.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  vcpkg.json
cmake/: git_info.hpp.in
internal/: git_info.hpp.in
scripts/: setup_conan.ps1  setup_conan.sh  setup_vcpkg.ps1  setup_vcpkg.sh
src/: main.cpp
src/adapters/: fs.hpp
src/cli/args_parser/: args_parser.cpp  args_parser.hpp
src/core/copy_engine/: copy_engine.cpp  copy_engine.hpp
src/extensions/: metadata.cpp  metadata.hpp  resumer.cpp  resumer.hpp  verifier.hpp
src/infra/: interrupt.cpp  interrupt.hpp  retry.hpp
src/infra/config/: config.cpp  config.hpp
src/infra/error_handler/: error.cpp  error.hpp
src/infra/hash/: xxhash_verifier.cpp  xxhash_verifier.hpp
src/infra/monitoring/: monitoring.cpp  monitoring.hpp
src/infra/thread_pool/: thread_pool.hpp
tests/: sample_test.cpp
